[package]
name = "wasm"
version = "0.1.0"
authors = ["John Gallagher <john.willis.gallagher@gmail.com>"]
edition = "2018"

# Config mostly pulled from: https://github.com/rustwasm/wasm-bindgen/blob/master/examples/fetch/Cargo.toml

[lib]
crate-type = ["cdylib"]

[dependencies]
ansi_term = "0.12"
console_error_panic_hook = { version = "0.1.6" }
jsonxf = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.2" }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen-futures = "0.4.1"
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }

[dependencies.syntect]
version = "4.4"
default-features = false
features = ["parsing", "html", "yaml-load", "dump-load", "dump-create", "regex-fancy"]

[build-dependencies]
syntect = { version = "4.4", default-features = false }